modificaciones del main y footer

--- a/index.html
+++ b/index.html
@@ -17,12 +17,9 @@
     <div class="grid-container">
       <nav class="navbar">
         <div class="logo">
-          <img
-            class="img-logo"
-            src="/assets/img/Captura_de_pantalla_2025-01-15_145107-removebg-preview.png"
-            alt="Conducelo"
-          />
+          <img class="img-logo" src="/assets/img/logo.png" alt="Conducelo" />
         </div>
+        <button type="button"><i class="fa-solid fa-bars"></i></button>
         <div class="lista">
           <ul>
             <li>
@@ -39,7 +36,6 @@
             </li>
           </ul>
         </div>
-        <button type="button"><i class="fa-solid fa-bars"></i></button>
       </nav>
       <header class="header">
         <div>
@@ -65,15 +61,91 @@
         <!--primer cart-->
         <div class="cart">
           <div class="creativo">
-            <img src="/assets/img/boston.avif" alt="boston"></div>
-            <div>
-              <h4>Celtics Boston "Jayson Tatum"</h4>
-              <P>Camiseta original del equipo boston Celtics, con tela de secado rapido</P>
-            </div>
-            <div>
-              <button>COMPRA</button>
-            </div>
+            <img class="img-creativo" src="/assets/img/cx40.jpg" alt="cx40" />
           </div>
+          <div class="galeria">
+            <button>«</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>»</button>
+          </div>
+          <div>
+            <h2>Volvo CX40</h2>
+            <p>Precio:40.000 $</p>
+          </div>
+          <div>
+            <button class="button-cart">COMPRA</button>
+          </div>
+        </div>
+        <!--segunda Cart-->
+        <div class="cart">
+          <div class="creativo">
+            <img
+              class="img-creativo"
+              src="/assets/img/bronco.jpg"
+              alt="bronco"
+            />
+          </div>
+          <div class="galeria">
+            <button>«</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>»</button>
+          </div>
+          <div>
+            <h2>ford Bronco</h2>
+            <p>Precio:30.000 $</p>
+          </div>
+          <div>
+            <button class="button-cart">COMPRA</button>
+          </div>
+        </div>
+        <!--tercera cart-->
+        <div class="cart">
+          <div class="creativo">
+            <img
+              class="img-creativo"
+              src="/assets/img/mercedez G.webp"
+              alt="Mercedez G"
+            />
+          </div>
+          <div class="galeria">
+            <button>«</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>»</button>
+          </div>
+          <div>
+            <h2>Mercedez Benz G</h2>
+            <p>Precio:44.000 $</p>
+          </div>
+          <div>
+            <button class="button-cart">COMPRA</button>
+          </div>
+        </div>
+        <!--cuarta cart-->
+        <div class="cart">
+          <div class="creativo">
+            <img class="img-creativo" src="/assets/img/Q3.jpg" alt="Q3" />
+          </div>
+          <div class="galeria">
+            <button>«</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>»</button>
+          </div>
+          <div>
+            <h2>Audi Q3</h2>
+            <p>Precio:53.000 $</p>
+          </div>
+          <div>
+            <button class="button-cart">COMPRA</button>
+          </div>
+        </div>
       </main>
       <footer class="footer">Todos los derechos reservados ©️ 2025</footer>
     </div>
